@@ -2,7 +2,6 @@ package ej4W;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.io.PrintStream;
 
 
 public class Ejercicio4_Windows
@@ -19,82 +18,18 @@ public class Ejercicio4_Windows
 	
 	public static void main(String[] args)
 	{
-//		try
-//		{
-//			StringBuilder sb = new StringBuilder();
-//			ProcessBuilder pb = new ProcessBuilder().command("tasklist /fi \"STATUS eq running\"");
-//			Process p = pb.start();
-//			
-//			
-//			sb.append(p);
-//			System.out.println(sb);
-//		}
-//		catch (IOException e)	{e.printStackTrace();}
-		
-//		ProcessBuilder builder = new ProcessBuilder();
-//		builder.command("cmd.exe", "/c", "dir");
-//		
-//		builder.directory(new File(System.getProperty("user.home")));
-//		Process process;
-//		try
-//		{
-//			process = builder.start();
-//			int exitCode = process.waitFor();
-//		}
-//		catch (IOException e)			{e.printStackTrace();} 
-//		catch (InterruptedException e)	{e.printStackTrace();}
-		
-		
-		
-		
-//		try
-//		{
-//			//String command = "powershell.exe  your command";
-//			//Getting the version
-//			//String command = "powershell.exe $PSVersionTable.PSVersion";
-//			String command = "powershell.exe tasklist /fi \"STATUS running\"";
-//			
-//			String[] commandList = {"powershell.exe", "-Command", "tasklist /FI STATUS eq RUNNING"};  
-//
-//	        ProcessBuilder pb = new ProcessBuilder(commandList);  
-//
-//	        Process p = pb.start();
-//			
-//			
-//			// Executing the command
-//			//Process powerShellProcess = Runtime.getRuntime().exec(command);
-//			// Getting the results
-//			p.getOutputStream().close();
-//			String line;
-//			System.out.println("Standard Output:");
-//			BufferedReader stdout = new BufferedReader(new InputStreamReader(p.getInputStream()));
-//			while ((line = stdout.readLine()) != null)
-//			{
-//				System.out.println(line);
-//			}
-//			stdout.close();
-//			System.out.println("Standard Error:");
-//			BufferedReader stderr = new BufferedReader(new InputStreamReader(p.getErrorStream()));
-//			while ((line = stderr.readLine()) != null)
-//			{
-//				System.out.println(line);
-//			}
-//			stderr.close();
-//			System.out.println("Done");
-//		}
-//		catch (IOException e)	{e.printStackTrace();}
-		
-		
-		
+		//El comando a ejecutar: todos los servicios que están corriendo en nuestro sistema.
 		String[] command = {"cmd.exe", "/c", "tasklist /fi \"STATUS eq running\""};
         try
         {
-            ProcessBuilder processBuilder = new ProcessBuilder(command); // Split command into arguments
-            processBuilder.redirectErrorStream(true);
-            Process process = Runtime.getRuntime().exec(command);
+        	//Construye el proceso a partir del comando y lo empieza
+            ProcessBuilder pb = new ProcessBuilder(command);
+            Process process = pb.start();
             
-            // Capture output
+            //Construye un BufferedReader para leer el comando pasa por pipe.
             BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            
+            //Lee cada línea del resultado y lo guarda en el StringBuilder.
             StringBuilder output = new StringBuilder();
             String line;
             while ((line = reader.readLine()) != null)
@@ -102,14 +37,16 @@ public class Ejercicio4_Windows
                 output.append(line).append("\n");
             }
             
-            // Wait for the process to complete
+            //Termina a que acabe el proceso
             int exitCode = process.waitFor();
-            System.out.println("Command executed with exit code: " + exitCode);
-            System.out.println("Output: \n" + output.toString());
+            
+            //Muestra el resultado del comando.
+            System.out.println("Comando ejecutado con codido de salida " + exitCode);
+            System.out.println("\n"+output.toString());
         }
-        catch (IOException | InterruptedException e)	{e.printStackTrace();}
-		
-		
-		
+		//Lanzada por BufferedReader.readLine().
+        catch (IOException e)			{e.printStackTrace();} 
+		//Lanzada por Process.waitFor().
+		catch (InterruptedException e)	{e.printStackTrace();}
 	}
 }
